fix wrap bug

--- a/style.scss
+++ b/style.scss
@@ -117,6 +117,7 @@ button {
           align-items: center;
           height: 1.6rem;
           width: 4rem;
+          flex-shrink: 0;
           margin: 0.2rem;
           border-radius: 0.8rem;
           border: 1px solid white;
@@ -127,21 +128,27 @@ button {
           flex-grow: 1;
           margin-left: 10px;
           transition: 500ms;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
-        button {
-          height: 1.6rem;
-          width: 1.6rem;
-          margin: 0 0.2rem;
-          border-radius: 0.8rem;
-          background-color: transparent;
-          color: white;
-          border: 1px solid rgb(202, 202, 202);
-          box-shadow: inset 0 0 5px white;
-          transition: 250ms;
-          transition-timing-function: ease;
-        }
-        button:active {
-          box-shadow: (inset 0 0 10px white), (0 0 10px white);
+        div {
+          flex-shrink: 0;
+          button {
+            height: 1.6rem;
+            width: 1.6rem;
+            margin: 0 0.2rem;
+            border-radius: 0.8rem;
+            background-color: transparent;
+            color: white;
+            border: 1px solid rgb(202, 202, 202);
+            box-shadow: inset 0 0 5px white;
+            transition: 250ms;
+            transition-timing-function: ease;
+          }
+          button:active {
+            box-shadow: (inset 0 0 10px white), (0 0 10px white);
+          }
         }
       }
       li:hover {
@@ -166,7 +173,7 @@ button {
         :not(label, button) {
           color: rgb(151, 151, 151);
         }
-        label{
+        label {
           color: rgba(128, 128, 128, 0.356);
         }
       }
